--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.0.0-beta.0",
     "dotenv": "^16.0.0",
     "nodemon": "^2.0.15"
   }
