--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "showdown": "^2.0.3"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.0.0-beta.0",
